[package]
name = "double-buffer"
version = "0.1.0"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ['std']

std = ['parking_lot', 'parking_lot_core', 'alloc']
alloc = []

[dependencies]
radium = '0.6'
spin = '0.9'
crossbeam-utils = { version = '0.8', default-features = false }

parking_lot = { version = '0.11', optional = true }
parking_lot_core = { version = '0.8.3', optional = true }